--- a/package.json
+++ b/package.json
@@ -2,20 +2,29 @@
   "name": "enterprix-app",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.19.2",
-    "firebase-admin": "^12.5.0",
-    "next": "^16.0.10",
-    "node-fetch": "^3.3.2",
+    "autoprefixer": "^10.4.23",
+    "firebase": "^11.0.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.424.0",
+    "next": "16.0.10",
     "openai": "^6.10.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "postcss": "^8.5.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.19"
+  },
+  "devDependencies": {
+    "eslint": "^9.14.0",
+    "eslint-config-next": "16.0.10"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
