--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.23",
     "firebase": "^11.0.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.424.0",
     "next": "16.0.10",
